feat: add authorization for secured endpoints
- change names from "Owner" to "Username" for convenience
- refactor mockRepos and SwaggerUI docs accordingly
